# just-config-mixin

./: .pre-commit-config.yaml  README.md  model_config.json  pyproject.toml  test_example.py
.github/workflows/: docs.yaml  test.yaml
docs/: configmixin.html  index.html  search.js  yacm.html
references/: reference.py
src/configmixin/: __init__.py  _core.py
src/yacm/: __init__.py  _cli.py  _core.py  _utils.py
tests/: README.md  conftest.py  test_cli_arguments.py  test_config_io.py  test_config_mixin.py  test_core_functionality.py  test_edge_cases.py  test_enhanced_features.py  test_frozen_dict.py  test_integration.py  test_mixin_inheritance.py  test_mixin_patterns.py  test_register_decorator.py  test_var_args.py
